migrate to the cloudbees repository